[project]
name = "mineru-prefect-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "httpx>=0.28.1",
    "prefect>=3.6.27",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
]
keywords = [
    "pdf-parsing",
    "mineru",
    "prefect",
    "asyncio",
    "multimodal-ai",
    "etl-pipeline"
]
